// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result should match a snapshot when LOADING false 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <Component
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <Component>
          Showing Results for '
          1
          '
        </Component>
        <Component
          columns={
            Array [
              Object {
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "Address",
                "id": "address",
              },
              Object {
                "Cell": [Function],
                "Header": "Postcode",
                "id": "postcode",
              },
              Object {
                "Cell": [Function],
                "Header": "Status",
                "id": "identityCheck",
              },
              Object {
                "Cell": [Function],
                "Header": "",
                "id": "action",
              },
            ]
          }
          data={
            Array [
              Object {
                "_eTag": "\\"9CBE436919C6BE89A8642BC70A7CFAEE\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=MKC16000007",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=MKC16000007",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=RMK",
                  },
                  "offices": Object {
                    "href": "/offices/?id=MKC",
                  },
                  "self": Object {
                    "href": "/contacts/MKC16000007",
                  },
                },
                "active": true,
                "created": "2019-03-27T12:31:21.0000000Z",
                "dateOfBirth": "2019-11-22",
                "email": "cphilip133@rpsfiction.net",
                "forename": "Carson",
                "homePhone": "01632 968347",
                "id": "MKC16000007",
                "identityCheck": "pending",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "07700 908347",
                "modified": "2020-01-14T09:55:50.0000000Z",
                "negotiatorIds": Array [
                  "RMK",
                ],
                "officeIds": Array [
                  "MKC",
                ],
                "primaryAddress": Object {
                  "buildingName": "123",
                  "buildingNumber": "1",
                  "countryId": "GB",
                  "line1": "Harcourt Close",
                  "line2": "Leighton Buzzard",
                  "line3": "Bedfordshire",
                  "line4": "123123",
                  "postcode": "LU7 2ST",
                  "type": "primary",
                },
                "secondaryAddress": Object {
                  "buildingName": "123",
                  "buildingNumber": "1",
                  "countryId": "GB",
                  "line1": "Harcourt Close",
                  "line2": "Leighton Buzzard",
                  "line3": "Bedfordshire",
                  "line4": "123123",
                  "postcode": "LU7 2ST",
                  "type": "secondaryy",
                },
                "source": "",
                "surname": "Philip",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "020 7946 8347",
              },
              Object {
                "_eTag": "\\"9CAAB45D503202CCFB0118261AB523CD\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=BUC15000399",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=BUC15000399",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=PAE",
                  },
                  "offices": Object {
                    "href": "/offices/?id=BUC",
                  },
                  "self": Object {
                    "href": "/contacts/BUC15000399",
                  },
                },
                "active": false,
                "created": "2018-09-25T10:20:25.0000000Z",
                "dateOfBirth": "2019-12-19",
                "email": "1234566789@gmail.com",
                "forename": "Philip",
                "homePhone": "123456789",
                "id": "BUC15000399",
                "identityCheck": "pending",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "1234566789",
                "modified": "2019-12-30T08:46:21.0000000Z",
                "negotiatorIds": Array [
                  "PAE",
                ],
                "officeIds": Array [
                  "BUC",
                ],
                "primaryAddress": Object {
                  "buildingName": "The Wing",
                  "buildingNumber": "12313",
                  "countryId": "GB",
                  "line1": "Little Tingewick",
                  "line2": "Buckingham",
                  "line3": "Buckinghamshire",
                  "line4": "123",
                  "postcode": "MK18 4AG",
                  "type": "primary",
                },
                "secondaryAddress": Object {
                  "buildingName": "123",
                  "buildingNumber": "123123",
                  "countryId": "",
                  "line1": "123123",
                  "line2": "123123",
                  "line3": "123123",
                  "line4": "123123",
                  "postcode": "123123",
                  "type": "secondaryy",
                },
                "source": "",
                "surname": "Strang",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "1234566789",
              },
              Object {
                "_eTag": "\\"CCF150645B4D3071950ABE946F2C48A5\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=BUC15000351",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=BUC15000351",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=FHA",
                  },
                  "offices": Object {
                    "href": "/offices/?id=BUC",
                  },
                  "self": Object {
                    "href": "/contacts/BUC15000351",
                  },
                },
                "active": false,
                "created": "2018-08-25T07:58:42.0000000Z",
                "dateOfBirth": "2019-08-05",
                "email": "abc@gmail.com",
                "forename": "Philip",
                "homePhone": "123",
                "id": "BUC15000351",
                "identityCheck": "pending",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "123",
                "modified": "2019-12-30T09:49:03.0000000Z",
                "negotiatorIds": Array [
                  "FHA",
                ],
                "officeIds": Array [
                  "BUC",
                ],
                "primaryAddress": Object {
                  "buildingName": "Field Farm House",
                  "buildingNumber": "123",
                  "countryId": "GB",
                  "line1": "Field Farm Business Centre",
                  "line2": "Launton",
                  "line3": "Bicester",
                  "line4": "Oxfordshire",
                  "postcode": "OX26 5EL",
                  "type": "primary",
                },
                "secondaryAddress": Object {
                  "buildingName": "123",
                  "buildingNumber": "1",
                  "countryId": "GB",
                  "line1": "Harcourt Close",
                  "line2": "Leighton Buzzard",
                  "line3": "Bedfordshire",
                  "line4": "123123",
                  "postcode": "LU7 2ST",
                  "type": "secondary",
                },
                "source": "",
                "surname": "Bruce",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "123",
              },
              Object {
                "_eTag": "\\"17D851BF8B47F7EF8F3A2909414AB336\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=BED14001610",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=BED14001610",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=AJS",
                  },
                  "offices": Object {
                    "href": "/offices/?id=BED",
                  },
                  "self": Object {
                    "href": "/contacts/BED14001610",
                  },
                },
                "active": true,
                "created": "2018-01-12T16:04:05.0000000Z",
                "dateOfBirth": null,
                "email": "pwilson835@rpsfiction.net",
                "forename": "Philip",
                "homePhone": "01632 970935",
                "id": "BED14001610",
                "identityCheck": "unchecked",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "07700 910935",
                "modified": "2018-03-09T11:05:44.0000000Z",
                "negotiatorIds": Array [
                  "AJS",
                ],
                "officeIds": Array [
                  "BED",
                ],
                "primaryAddress": Object {
                  "buildingName": "",
                  "buildingNumber": "21",
                  "countryId": "GB",
                  "line1": "Mayhew Close",
                  "line2": "Bromham",
                  "line3": "Bedfordshire",
                  "line4": "",
                  "postcode": "MK43 8PW",
                  "type": "home",
                },
                "secondaryAddress": Object {
                  "buildingName": "The Brae",
                  "buildingNumber": "2",
                  "countryId": "GB",
                  "line1": "West End Road",
                  "line2": "Kempston",
                  "line3": "Bedford",
                  "line4": "Bedfordshire",
                  "postcode": "MK43 8RT",
                  "type": "secondary",
                },
                "source": "",
                "surname": "Wilson",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "020 7946 1093",
              },
              Object {
                "_eTag": "\\"28DCEEC21FEEC6CCCF0E3D8A51DBBDDD\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=BED14000165",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=BED14000165",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=JJS",
                  },
                  "offices": Object {
                    "href": "/offices/?id=BED",
                  },
                  "self": Object {
                    "href": "/contacts/BED14000165",
                  },
                },
                "active": true,
                "created": "2017-04-18T08:08:48.0000000Z",
                "dateOfBirth": null,
                "email": "pgrierson93@rpsfiction.net",
                "forename": "Philip",
                "homePhone": "01632 963820",
                "id": "BED14000165",
                "identityCheck": "unchecked",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "07700 903820",
                "modified": "2017-08-24T09:34:27.0000000Z",
                "negotiatorIds": Array [
                  "JJS",
                ],
                "officeIds": Array [
                  "BED",
                ],
                "primaryAddress": Object {
                  "buildingName": "",
                  "buildingNumber": "33",
                  "countryId": "",
                  "line1": "Pemberley Avenue",
                  "line2": "Bedford",
                  "line3": "Bedfordshire",
                  "line4": "",
                  "postcode": "MK40 2LE",
                  "type": "home",
                },
                "secondaryAddress": Object {
                  "buildingName": "",
                  "buildingNumber": "28",
                  "countryId": "GB",
                  "line1": "Greenvale Road",
                  "line2": "London",
                  "line3": "",
                  "line4": "",
                  "postcode": "SE9 1PD",
                  "type": "secondary",
                },
                "source": "",
                "surname": "Grierson",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "020 7946 3820",
              },
              Object {
                "_eTag": "\\"E13FBA71A43612AE52F7CBF02C6DA0B6\\"",
                "_embedded": Object {},
                "_links": Object {
                  "documents": Object {
                    "href": "/documents/?ownerType=contact&ownerId=BED13001801",
                  },
                  "identityChecks": Object {
                    "href": "/identityChecks/?contactId=BED13001801",
                  },
                  "negotiators": Object {
                    "href": "/negotiators/?id=MBW",
                  },
                  "offices": Object {
                    "href": "/offices/?id=BED",
                  },
                  "self": Object {
                    "href": "/contacts/BED13001801",
                  },
                },
                "active": true,
                "created": "2016-06-27T11:17:13.0000000Z",
                "dateOfBirth": null,
                "email": "pshanks304@rpsfiction.net",
                "forename": "Philip",
                "homePhone": "01632 969249",
                "id": "BED13001801",
                "identityCheck": "unchecked",
                "marketingConsent": "notAsked",
                "metadata": Object {},
                "mobilePhone": "07700 909249",
                "modified": "2019-10-31T08:38:01.0000000Z",
                "negotiatorIds": Array [
                  "MBW",
                ],
                "officeIds": Array [
                  "BED",
                ],
                "primaryAddress": Object {
                  "buildingName": "",
                  "buildingNumber": "31",
                  "countryId": "",
                  "line1": "Bower Street",
                  "line2": "Bedford",
                  "line3": "Bedfordshire",
                  "line4": "123123",
                  "postcode": "MK40 3RD",
                  "type": "primary",
                },
                "secondaryAddress": Object {
                  "buildingName": "123123",
                  "buildingNumber": "2142314",
                  "countryId": "",
                  "line1": "21342134",
                  "line2": "21342134",
                  "line3": "2314132",
                  "line4": "21343214",
                  "postcode": "2341234",
                  "type": "secondary",
                },
                "source": "",
                "surname": "Shanks",
                "title": "Mr",
                "workAddress": "",
                "workPhone": "020 7946 9249",
              },
            ]
          }
          loading={false}
          scrollable={true}
        />
        <Component
          onChange={[Function]}
          pageNumber={1}
          pageSize={10}
          totalCount={6}
        />
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;

exports[`Result should match a snapshot when LOADING true 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <Component
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <Component>
          Showing Results for '
          1
          '
        </Component>
        <Component
          columns={
            Array [
              Object {
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "Address",
                "id": "address",
              },
              Object {
                "Cell": [Function],
                "Header": "Postcode",
                "id": "postcode",
              },
              Object {
                "Cell": [Function],
                "Header": "Status",
                "id": "identityCheck",
              },
              Object {
                "Cell": [Function],
                "Header": "",
                "id": "action",
              },
            ]
          }
          data={Array []}
          loading={true}
          scrollable={true}
        />
        <Component
          onChange={[Function]}
          pageNumber={1}
        />
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;

exports[`Result should match a snapshot when no results found 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <Component
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <div>
          <div>
            <Component
              infoType=""
            >
              <Component>
                No Results found
              </Component>
            </Component>
          </div>
          <div>
            <Component
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              New Search
            </Component>
          </div>
        </div>
        <Component
          onChange={[Function]}
          pageNumber={1}
        />
      </Component>
    </div>
  </Component>
</Connect(ErrorBoundary)>
`;
